# rapidauth

./: .gitignore  README.md  pyproject.toml
docs/: docs.js  documentation.html  index.html  styles.css
fastauth/: __init__.py  cli.py  core.py
fastauth/backends/: base.py  sqlalchemy_adapter.py  tortoise_adapter.py
fastauth/config/: __init__.py  settings.py
fastauth/decorators/: __init__.py  auth.py
fastauth/email/: sender.py
fastauth/exceptions/: __init__.py  auth.py
fastauth/jwt/: handler.py
fastauth/managers/: rate_limit.py  user.py
fastauth/middleware/: auth.py
fastauth/oauth/: base.py  discord.py  github.py
fastauth/permissions/: __init__.py  checker.py
fastauth/router/: __init__.py  auth.py
fastauth/schemas/: auth.py
fastauth/sessions/: manager.py
rapidauth/: __init__.py  cli.py  core.py
rapidauth/backends/: __init__.py  sqlalchemy_adapter.py  tortoise_adapter.py
rapidauth/config/: __init__.py  settings.py
rapidauth/decorators/: auth.py
rapidauth/email/: sender.py
rapidauth/exceptions/: auth.py
rapidauth/hashing/: __init__.py  handler.py
rapidauth/jwt/: __init__.py  handler.py  store.py
rapidauth/managers/: __init__.py  rate_limit.py  user.py
rapidauth/middleware/: auth.py
rapidauth/oauth/: __init__.py  google.py
rapidauth/permissions/: checker.py
rapidauth/router/: auth.py
rapidauth/schemas/: __init__.py
rapidauth/sessions/: __init__.py  manager.py
rapidauth/utils/: __init__.py  helpers.py
test/: main.py  test_fastauth.py  test_sqlalchemy.py
