[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastauth-framework"
version = "0.2.8"
description = "Professional plug-and-play authentication framework for FastAPI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["fastapi", "auth", "jwt", "oauth", "authentication", "security"]
authors = [
    {name = "akhmedcodes", email = "axmadjonqaxxorovc@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: FastAPI",
    "Topic :: Security",
    "Intended Audience :: Developers",
]

dependencies = [
    "fastapi>=0.100.0",
    "pyjwt[crypto]>=2.8.0",
    "bcrypt>=4.0.0",
    "argon2-cffi>=21.3.0",
    "python-multipart>=0.0.6",
    "httpx>=0.24.0",
    "aiosmtplib>=2.0.0",
    "jinja2>=3.1.0",
    "cryptography>=41.0.0",
    "pydantic[email]>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
tortoise = ["tortoise-orm>=0.20.0", "aiosqlite>=0.19.0"]
sqlalchemy = ["sqlalchemy[asyncio]>=2.0.0", "alembic>=1.12.0"]
sqlmodel = ["sqlmodel>=0.0.14"]
all = [
    "tortoise-orm>=0.20.0",
    "aiosqlite>=0.19.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "sqlmodel>=0.0.14",
    "uvicorn[standard]>=0.22.0",
]
dev = [
    "tortoise-orm>=0.20.0",
    "aiosqlite>=0.19.0",
    "uvicorn[standard]>=0.22.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage       = "https://github.com/pypi-packages-akhmedcodes/fastauth-framework"
Repository     = "https://github.com/pypi-packages-akhmedcodes/fastauth-framework"
"Bug Tracker"  = "https://github.com/pypi-packages-akhmedcodes/fastauth-framework/issues"
Author         = "https://beacons.ai/akhmedcodes"

[project.scripts]
fastauth = "fastauth.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fastauth*"]
